--- a/views/admin/offer.ejs
+++ b/views/admin/offer.ejs
@@ -96,7 +96,7 @@
                 </div>
                 <div class="card bg-gradient-to-br from-gray-900 to-gray-800 shadow-2xl rounded-xl overflow-hidden">
                     <div class="card-body p-8">
-                        <!-- Table Header Section -->
+                  
                         
                         
                         <div class="overflow-x-auto">
@@ -177,7 +177,7 @@ const deleteButtons = document.querySelectorAll('.deletebtn');
 
 deleteButtons.forEach(deleteButton => {
 deleteButton.addEventListener('click', function (event) {
-    event.preventDefault(); // Prevent default form submission behavior
+    event.preventDefault(); 
 
     const offerId = this.getAttribute('value');
 
